Updated .travis.yml Travis seems to have problems, found another person solved the problem by adding these rows to his travis.yml. Let's give it a try.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: objective-c
 
+before_install:
+    brew update
+    brew upgrade xctool
+
 xcode_project: gameController.xcodeproj
 xcode_scheme: gameController
 xcode_sdk: iphonesimulator
